--- a/index.html
+++ b/index.html
@@ -1,1 +1,30 @@
+<!DOCTYPE html>
+<html lang="es">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Malla Ingeniería Comercial - UdeC</title>
+  <script src="https://cdn.tailwindcss.com"></script>
+</head>
+<body class="bg-gray-100 text-gray-800">
+  <header class="bg-blue-700 text-white p-4 shadow">
+    <h1 class="text-2xl font-bold text-center">Malla Interactiva - Ingeniería Comercial UdeC</h1>
+  </header>
+
+  <main class="p-6">
+    <div id="malla-container" class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6"></div>
+  </main>
+
+  <!-- Modal -->
+  <div id="modal" class="fixed inset-0 bg-black bg-opacity-50 hidden items-center justify-center z-50">
+    <div class="bg-white p-6 rounded shadow max-w-md w-full">
+      <h2 id="modal-title" class="text-xl font-bold mb-2"></h2>
+      <p id="modal-info" class="text-gray-700 mb-4"></p>
+      <button onclick="closeModal()" class="bg-blue-600 text-white px-4 py-2 rounded">Cerrar</button>
+    </div>
+  </div>
+
+  <script src="script.js"></script>
+</body>
+</html>
 
